# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
#

2005-06-02 09:46:45 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-69

    Summary:
      xhtml, now XHTML elements can be serialized as HTML
    Revision:
      itools--main--0.9--patch-69


    modified files:
     Changelog catalog/prof.py html/HTML.py html/parser.py
     xhtml/XHTML.py xml/XML.py


2005-06-01 19:03:49 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-68

    Summary:
      xhtml, improve naming style for some methods, add "get_content"
    Revision:
      itools--main--0.9--patch-68


    modified files:
     Changelog html/HTML.py xml/XML.py


2005-06-01 13:29:32 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-67

    Summary:
      xml, move "XHTML.Document.to_text" to "XML.Document"
    Revision:
      itools--main--0.9--patch-67


    modified files:
     Changelog xhtml/XHTML.py xml/XML.py


2005-05-30 18:59:51 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-66

    Summary:
      catalog, fix un-index
    Revision:
      itools--main--0.9--patch-66


    modified files:
     Changelog catalog/IIndex.py


2005-05-30 18:28:02 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-65

    Summary:
      catalog, fix indexing
    Revision:
      itools--main--0.9--patch-65


    modified files:
     Changelog catalog/IIndex.py


2005-05-29 12:56:45 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-64

    Summary:
      catalog, optimize, merge "documents" and "positions" resources
    Revision:
      itools--main--0.9--patch-64


    modified files:
     Changelog catalog/IIndex.py


2005-05-28 18:20:08 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-63

    Summary:
      catalog, optimize index positions resource
    Revision:
      itools--main--0.9--patch-63

    Change the layout of the positions resource, now it is a made of
    variable size blocks.
    