@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
 #
 
+2005-06-02 10:18:58 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-70
+
+    Summary:
+      xhtml, fix "Element.get_content_as_html"
+    Revision:
+      itools--main--0.9--patch-70
+
+
+    modified files:
+     Changelog xhtml/XHTML.py
+
+
 2005-06-02 09:46:45 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-69
 
     Summary:
